# nv-sflow

./: .cursorignore  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs-site/: .gitignore  docusaurus.config.js  package-lock.json  package.json
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js
docs-site/static/: sflow_intro.html
docs/developer/: _category_.json
docs/developer/dev-notes/: _category_.json  slurm.md
docs/release_notes/: RELEASE_NOTES_v0.2.0.md  consolidated-dynamo-auto-benchmarking.html  migration-highlights.html
docs/user/: _category_.json  architecture.md  artifacts.md  backends.md  cli.md  configuration.md  faq.md  intro.md  modular-workflows.md  operators.md  outputs.md  probes.md  quick-reference.md  quickstart.md  replicas.md  resources.md  samples.md  variables.md
examples/: local_hello_world.yaml  qwen_2_5_vllm.yaml  slurm_aiperf_template.yaml  slurm_dynamo_sglang_agg.yaml  slurm_dynamo_sglang_disagg.yaml  slurm_dynamo_trtllm_agg.yaml  slurm_dynamo_trtllm_disagg.yaml  slurm_dynamo_vllm_agg.yaml  slurm_dynamo_vllm_disagg.yaml  slurm_infmax_v1_ds_r1.yaml  slurm_trtllm_serve_disagg.yaml
examples/inference_x_v2/: benchmark_infmax.yaml  bulk_input.csv  common_workflow.yaml
examples/inference_x_v2/composed_recipes/: sglang_agg_benchmark_aiperf_2n_008.yaml  sglang_prefill_decode_benchmar_003.yaml  trtllm_agg_benchmark_aiperf_1n_007.yaml  trtllm_prefill_decode_benchmar_001.yaml  vllm_agg_benchmark_aiperf_1n_2_009.yaml
examples/inference_x_v2/sglang/: decode.yaml
examples/inference_x_v2/trtllm/: agg.yaml  decode.yaml
examples/inference_x_v2/vllm/: agg.yaml  decode.yaml  prefill.yaml
scripts/: full_sample_tests.sh
src/sflow/: __init__.py  __main__.py  exceptions.py  logging.py
src/sflow/app/: __init__.py  assembly.py  sflow.py
src/sflow/cli/: __init__.py  batch.py  compose.py  run.py  sample.py  skill.py  visualize.py
src/sflow/config/: __init__.py  loader.py  resolver.py  schema.py
src/sflow/core/: __init__.py  artifact.py  artifact_registry.py  backend.py  backend_registry.py  command.py  compute_node.py  constraints.py  context.py  dag.py  launcher.py  operator.py  operator_registry.py  orchestrator.py  outputs.py  probe.py  resource.py  state.py  task.py  task_graph.py  variable.py  workflow.py
src/sflow/plugins/: __init__.py
src/sflow/samples/: __init__.py  local_dag.yaml  slurm_aiperf_template.yaml  slurm_auto_replica.yaml  slurm_dynamo_sglang_agg.yaml  slurm_dynamo_sglang_disagg.yaml  slurm_dynamo_trtllm_agg.yaml  (+6 more)
tests/: conftest.py
tests/e2e_tests/: sample_test.sh
tests/integration/: sbatch_sflow.slurm  test_artifacts_integration.py  test_cli_run_dry_run_dynamo_example.py
tests/unit/: conftest.py  test_app_assembly_allocate_backends.py  test_app_assembly_build_state_releases_on_failure.py  test_app_assembly_build_task_graph.py  test_app_assembly_default_local_backend.py  test_app_assembly_default_operator.py  test_app_assembly_resolve_backends.py  test_app_assembly_resolve_variables.py  test_app_assembly_resolve_workflow_variables.py  test_app_assembly_task_context.py  test_app_assembly_task_script_resolution.py  test_app_assembly_workflow_vars_backends_ctx.py  test_app_sflow_dry_run.py  test_app_sflow_releases_backends.py  test_artifacts_resolution.py  test_backend_registry_and_config_validation.py  test_cli_batch.py  test_cli_merge.py  test_cli_run_bulk_input.py  test_cli_skill.py  test_cli_visualize_mermaid.py  test_config_loader.py  test_config_loader_expression_syntax.py  test_config_loader_merge.py  test_config_resolver.py  test_config_schema.py  test_core_command.py  test_core_operator.py  test_core_orchestrator_fail_fast.py  test_core_orchestrator_failure_probe.py  test_core_orchestrator_retry.py  test_core_probes.py  test_operator_registry_and_config_validation.py  test_orchestrator_local_completion.py  test_outputs_mvp.py  test_plugin_backends_local.py  test_plugin_backends_slurm_backend.py  test_preflight_validate_container_images.py  test_preflight_validate_task_graph.py  test_preflight_validation_slurm.py  (+4 more)
(+75 files in other folders)
